made a page for the app

--- a/ToDoPage.html
+++ b/ToDoPage.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="Assets/Todopage.css">
 <head>
     <meta charset="UTF-8">
-    <title>ToDoApp</title>
+    <title>Todo App</title>
+    <link rel="stylesheet" href="Assets/Todopage.css">
 </head>
 <body>
-    <div id="container"></div>
+<div class="container">
+    <h1>My Todo App</h1>
+
+    <!-- Add Task Form -->
+    <div class="add-task">
+        <h2>Add a Task</h2>
+        <form method="POST" action="/add">
+            <input type="text" name="task" placeholder="Enter task" required>
+            <select name="priority" required>
+                <option value="">Select priority</option>
+                <option value="HIGH">High</option>
+                <option value="MEDIUM">Medium</option>
+                <option value="LOW">Low</option>
+            </select>
+            <select name="tag" required>
+                <option value="">Select tag</option>
+                {% for tag in tags %}
+                <option value="{{ tag }}">{{ tag }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit">Add Task</button>
+        </form>
+    </div>
+
+    <!-- Display Tasks -->
+    <div class="task-lists">
+        {% for priority, tasks in task_data.items() %}
+        <div class="priority-section {{ priority|lower }}">
+            <h2>{{ priority }} Priority</h2>
+            {% if tasks %}
+            <ul>
+                {% for task in tasks %}
+                <li>
+                    {{ task }}
+                    <form method="POST" action="/remove" class="remove-form">
+                        <input type="hidden" name="priority" value="{{ priority }}">
+                        <input type="hidden" name="index" value="{{ loop.index0 }}">
+                        <button type="submit">Remove</button>
+                    </form>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <p>No tasks</p>
+            {% endif %}
+        </div>
+        {% endfor %}
+    </div>
+</div>
 </body>
 </html>
